mdt_cli/tests/snapshots/snapshots__unknown_transformer_check.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpRGFP39
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
mdt::unknown_transformer

  x [readme.md:3:1] unknown transformer `foobar`
  help: available transformers: trim, trimStart, trimEnd, indent, prefix,
        suffix, linePrefix, lineSuffix, wrap, codeBlock, code, replace, if

error: validation errors found; fix the errors above (see `mdt doctor` for hints)
