mdt_cli/tests/snapshots/snapshots__unknown_transformer_ignore_verbose.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpQxsS5B
    - "--ignore-invalid-transformers"
    - "--verbose"
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
Scanned project: 1 provider(s), 1 consumer(s)
  Providers:
    @docs (template.t.md)

----- stderr -----
mdt::unknown_transformer

  ! [readme.md:3:1] unknown transformer `foobar`
  help: available transformers: trim, trimStart, trimEnd, indent, prefix,
        suffix, linePrefix, lineSuffix, wrap, codeBlock, code, replace, if

Check failed.
  stale consumers: 1

Stale consumers:
  block `docs` at readme.md:3:1

1 consumer block(s) are out of date. Run `mdt update`.
