mdt_cli/tests/snapshots/snapshots__unused_provider_check_verbose.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmplEzXwz
    - "--verbose"
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
Scanned project: 2 provider(s), 1 consumer(s)
  Providers:
    @orphan_block (template.t.md)
    @used_block (template.t.md)

----- stderr -----
mdt::unused_provider

  ! [template.t.md:7:1] provider block `orphan_block` has no consumers
  help: add a consumer block `<!-- {=orphan_block} -->...<!-- {/orphan_block}
        -->`, remove the unused provider, or pass `--ignore-unused-blocks`

Check failed.
  stale consumers: 1

Stale consumers:
  block `used_block` at readme.md:3:1

1 consumer block(s) are out of date. Run `mdt update`.
