mdt_cli/tests/snapshots/snapshots__update_dry_run_verbose.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpKBfvmj
    - "--verbose"
    - update
    - "--dry-run"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 3 provider(s), 6 consumer(s)
  Providers:
    @header (template.t.md)
    @install (template.t.md)
    @usage (template.t.md)
Dry run: would update 6 block(s) in 2 file(s):
  docs.md
  readme.md

----- stderr -----
