mdt_cli/tests/snapshots/snapshots__update_verbose_multiple_providers.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpSyiRXd
    - "--verbose"
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 3 provider(s), 6 consumer(s)
  Providers:
    @header (template.t.md)
    @install (template.t.md)
    @usage (template.t.md)
Updated 6 block(s) in 2 file(s).
  docs.md
  readme.md

----- stderr -----
