mdt_cli/tests/snapshots/snapshots__update_verbose_up_to_date.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpMHInBT
    - "--verbose"
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Scanned project: 2 provider(s), 3 consumer(s)
  Providers:
    @apiDocs (template.t.md)
    @installGuide (template.t.md)
All consumer blocks are already up to date.

----- stderr -----
