mdt_cli/tests/snapshots/snapshots__validation_errors_check.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpwnHX8f
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
mdt::unclosed_block

  x [unclosed.md:3:1] missing closing tag for block `valid_block`
  help: add `<!-- {/valid_block} -->` to close this block, or, if a nearby
        closing tag has a different name, fix the misspelled tag so the names
        match

error: validation errors found; fix the errors above (see `mdt doctor` for hints)
